--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,10 @@
 {
   "lerna": "2.11.0",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "packages/@monorepo-utils/*"
   ],
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
