--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "version_up:major": "lerna publish --skip-npm --conventional-commits --cd-version major",
     "version_up:minor": "lerna publish --skip-npm --conventional-commits --cd-version minor",
     "version_up:patch": "lerna publish --skip-npm --conventional-commits --cd-version patch",
-    "version_up": "lerna publish --skip-npm --conventional-commits"
+    "version_up": "lerna publish --skip-npm --conventional-commits",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "precommit": "lint-staged",
+    "postcommit": "git reset"
   },
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "packages/@monorepo-utils/*"
     ]
   },
   "keywords": [
@@ -29,6 +33,20 @@
   "author": "azu",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^2.11.0"
+    "husky": "^0.14.3",
+    "lerna": "^2.11.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.9.2"
+  },
+  "prettier": {
+    "singleQuote": false,
+    "printWidth": 120,
+    "tabWidth": 4
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
