--- a/packages/@monorepo-utils/publish/package.json
+++ b/packages/@monorepo-utils/publish/package.json
@@ -1,12 +1,15 @@
 {
-  "private": true,
   "name": "@monorepo-utils/publish",
   "version": "1.0.0",
-  "description": "Publish script for monorepo",
-  "main": "./publish.js",
+  "description": "npm publish script for monorepo",
+  "main": "publish.js",
   "bin": {
-    "monorepo-utils-publish": "./publish.js"
+    "monorepo-utils-publish": "publish.js"
   },
+  "files":[
+    "publish.js",
+    "utils"
+  ],
   "dependencies": {
     "can-npm-publish": "^1.3.1",
     "chalk": "^2.3.0",
