--- a/packages/@monorepo-utils/publish/package.json
+++ b/packages/@monorepo-utils/publish/package.json
@@ -11,13 +11,12 @@
     "utils"
   ],
   "dependencies": {
+    "@monorepo-utils/package-utils": "^1.0.0",
     "can-npm-publish": "^1.3.1",
     "chalk": "^2.3.0",
     "child-process-promise": "^2.2.1",
     "cli-spinners": "^1.1.0",
-    "globby": "^8.0.1",
     "inquirer": "^6.0.0",
-    "load-json-file": "^5.0.0",
     "log-update": "^2.3.0",
     "meow": "^5.0.0"
   }
