--- a/packages/@monorepo-utils/publish/package.json
+++ b/packages/@monorepo-utils/publish/package.json
@@ -2,14 +2,14 @@
   "name": "@monorepo-utils/publish",
   "version": "1.0.0",
   "description": "npm publish script for monorepo",
+  "files": [
+    "publish.js",
+    "utils"
+  ],
   "main": "publish.js",
   "bin": {
     "monorepo-utils-publish": "publish.js"
   },
-  "files":[
-    "publish.js",
-    "utils"
-  ],
   "dependencies": {
     "@monorepo-utils/package-utils": "^1.0.0",
     "can-npm-publish": "^1.3.1",
@@ -19,5 +19,8 @@
     "inquirer": "^6.0.0",
     "log-update": "^2.3.0",
     "meow": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
