--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
+sudo: false
 language: node_js
 node_js: stable
+cache: yarn
+before_install:
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
+- export PATH=$HOME/.yarn/bin:$PATH
+install:
+- yarn install --frozen-lockfile
+- yarn run bootstrap
