--- a/packages/@monorepo-utils/collect-changelog/package.json
+++ b/packages/@monorepo-utils/collect-changelog/package.json
@@ -55,7 +55,8 @@
       "json",
       "node"
     ],
-    "testRegex": "test/.*.tsx?",
+    "testRegex": "./test/.*.ts$",
+    "rootDir": ".",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     }
