--- a/packages/@monorepo-utils/package-utils/package.json
+++ b/packages/@monorepo-utils/package-utils/package.json
@@ -51,7 +51,8 @@
       "json",
       "node"
     ],
-    "testRegex": "test/.*.tsx?",
+    "testRegex": "./test/.*.ts$",
+    "rootDir": ".",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     }
