--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
     "packages/*",
     "packages/@monorepo-utils/*"
   ],
-  "version": "0.0.0",
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
