chore(package): fix publish

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:updateSnapshot": "lerna run test:updateSnapshot",
     "build": "lerna run build",
     "clean": "lerna run clean",
-    "publish": "node scripts/release/publish.js",
-    "publish:ci": "node scripts/release/publish.js --ci",
+    "publish": "monorepo-utils-publish",
+    "publish:ci": "monorepo-utils-publish --ci",
     "version_up:major": "lerna publish --skip-npm --conventional-commits --cd-version major",
     "version_up:minor": "lerna publish --skip-npm --conventional-commits --cd-version minor",
     "version_up:patch": "lerna publish --skip-npm --conventional-commits --cd-version patch",
