--- a/packages/@monorepo-utils/publish/package.json
+++ b/packages/@monorepo-utils/publish/package.json
@@ -34,6 +34,7 @@
     "consolemock": "^1.1.0",
     "cross-env": "^5.2.0",
     "jest": "^23.4.2",
+    "strip-ansi": "^4.0.0",
     "ts-jest": "^23.1.0",
     "typescript": "^3.0.1"
   },
