--- a/archives/publish/package.json
+++ b/archives/publish/package.json
@@ -26,8 +26,9 @@
     "child-process-promise": "^2.2.1",
     "cli-spinners": "^1.1.0",
     "inquirer": "^6.2.1",
+    "lerna": "^3.10.5",
     "log-update": "^2.3.0",
-    "meow": "^5.0.0"
+    "meow": "^7.1.1"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
