--- a/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
+++ b/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
@@ -36,12 +36,12 @@
     "module"
   ],
   "scripts": {
-    "build": "tsc -p . && tsc --project ./tsconfig.module.json",
+    "build": "tsc -b . && tsc -b tsconfig.module.json",
     "clean": "rimraf lib/ module/",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run clean && npm run build",
     "test": "jest",
-    "watch": "tsc -p . --watch"
+    "watch": "tsc -b . --watch"
   },
   "prettier": {
     "printWidth": 120,
