--- a/packages/@monorepo-utils/package-utils/tsconfig.json
+++ b/packages/@monorepo-utils/package-utils/tsconfig.json
@@ -13,17 +13,12 @@
       "es2017",
       "dom"
     ],
-    /* Strict Type-Checking Options */
     "strict": true,
-    /* Additional Checks */
     "noUnusedLocals": true,
-    /* Report errors on unused locals. */
     "noUnusedParameters": true,
-    /* Report errors on unused parameters. */
     "noImplicitReturns": true,
-    /* Report error when not all code paths in function return a value. */
-    "noFallthroughCasesInSwitch": true
-    /* Report errors for fallthrough cases in switch statement. */
+    "noFallthroughCasesInSwitch": true,
+    "composite": true
   },
   "include": [
     "src/**/*"
@@ -31,5 +26,6 @@
   "exclude": [
     ".git",
     "node_modules"
-  ]
+  ],
+  "references": []
 }
