--- a/packages/@monorepo-utils/package-utils/tsconfig.json
+++ b/packages/@monorepo-utils/package-utils/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "newLine": "LF",
     "outDir": "./lib/",
+    "rootDir": "./src",
     "target": "es5",
     "sourceMap": true,
     "declaration": true,
