--- a/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
+++ b/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
@@ -37,7 +37,7 @@
   ],
   "scripts": {
     "build": "tsc -b . && tsc -b tsconfig.module.json",
-    "clean": "rimraf lib/ module/",
+    "clean": "rimraf lib/ module/ && tsc -b --clean && tsc -b tsconfig.module.json --clean",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepublish": "npm run clean && npm run build",
     "test": "jest",
