fix: use upath instead of path

--- a/packages/@monorepo-utils/collect-changelog/package.json
+++ b/packages/@monorepo-utils/collect-changelog/package.json
@@ -67,7 +67,8 @@
     "cclog-parser": "^1.1.1",
     "changelog-parser": "^2.6.0",
     "handlebars": "^4.0.12",
-    "meow": "^7.1.1"
+    "meow": "^7.1.1",
+    "upath": "^2.0.0"
   },
   "devDependencies": {
     "@types/handlebars": "^4.0.40",
