--- a/packages/@monorepo-utils/package-utils/package.json
+++ b/packages/@monorepo-utils/package-utils/package.json
@@ -62,7 +62,8 @@
   },
   "dependencies": {
     "globby": "^11.0.1",
-    "load-json-file": "^6.2.0"
+    "load-json-file": "^6.2.0",
+    "upath": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
