--- a/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
+++ b/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
@@ -71,6 +71,7 @@
     "@monorepo-utils/package-utils": "^2.2.1",
     "comment-json": "^3.0.3",
     "meow": "^7.1.1",
+    "semver-match": "0.1.1",
     "upath": "^2.0.1"
   },
   "devDependencies": {
