--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
     "packages/*",
     "packages/@monorepo-utils/*"
   ],
+  "version": "2.4.3",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
