--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: yarn install && yarn bootstrap
+      - name: Type Check
+        run: yarn type-check
       - name: Test
         run: yarn test
