--- a/packages/@monorepo-utils/package-utils/package.json
+++ b/packages/@monorepo-utils/package-utils/package.json
@@ -64,7 +64,7 @@
     "globby": "^11.0.1",
     "load-json-file": "^6.2.0",
     "upath": "^2.0.1",
-    "yaml": "2.1.3"
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
