--- a/packages/@monorepo-utils/get-workspaces-cli/package.json
+++ b/packages/@monorepo-utils/get-workspaces-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepo-utils/get-workspaces-cli",
-  "version": "2.9.0",
+  "version": "2.10.0",
   "description": "A CLI that get each package paths in a monorepo",
   "keywords": [
     "lerna",
@@ -31,12 +31,10 @@
     "type": "git",
     "url": "https://github.com/azu/monorepo-utils.git"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "@monorepo-utils/package-utils": "^2.9.0"
   },
-  "devDependencies": {},
   "publishConfig": {
     "access": "public"
   }
