--- a/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
+++ b/packages/@monorepo-utils/workspaces-to-typescript-project-references/package.json
@@ -68,8 +68,16 @@
     ]
   },
   "dependencies": {
+    "@monorepo-utils/package-utils": "^2.9.0",
+    "comment-json": "^3.0.3",
+    "meow": "^7.1.1",
+    "semver-match": "0.1.1",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.0",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
